--- a/css/step.css
+++ b/css/step.css
@@ -5,9 +5,12 @@ body {
     width: 100%;
     max-width: 1210px;
     padding: 0 20px;
-    margin: 100px auto;
+    margin: 20px auto;
     box-sizing: border-box;
     font-family: 'Source Sans Pro';
+}
+.status-head-mobile {
+    display: none;
 }
 .status-head__img {
     width: 100%;
@@ -58,26 +61,31 @@ body {
     width: 100%;
     max-width: 424px;
 }
-.content-head {
+.general-head {
     font-style: normal;
     font-weight: bold;
     font-size: 40px;
     line-height: 50px;
     color: #000000;
+    margin: 0;
 }
-.content-paragraph {
+.general-paragraph {
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
     line-height: 20px;
     color: #000000;
     margin-top: 16px;
+    margin-bottom: 0;
 }
-.content-paragraph_nowrap {
+.general-paragraph_nowrap {
     white-space: nowrap;
 }
 .delivery-service {
-    margin-top: 52px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    margin-top: 32px;
 }
 .ds-checkbox-box {
     margin-top: 10px;
@@ -143,16 +151,45 @@ body {
 .ds-checkbox-box input[type="checkbox"]:focus + label::before {
     outline: rgb(59, 153, 252) auto 5px;
 }
+.content-integration {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-end;
+    width: 100%;
+    padding-left: 30px;
+}
 .content-integration__example {
     box-shadow: 0 0 10px #c7c7c7;
+    max-width: 100%;
+}
+
+.delivery-back {
+    width: 100%;
+    max-width: 110px;
+    margin-right: 72px;
+    margin-top: 22px;
 }
 .delivery-further {
-    margin-top: 28px;
+    width: 100%;
+    max-width: 110px;
+    margin-top: 22px;
+}
+.delivery-back__button {
+    width: 100%;
+    max-width: 110px;
+    padding: 8px 0;
+    background: #ffffff;
+    border-radius: 3px;
+    font-size: 16px;
+    color: #357CA5;
+    text-align: center;
+    border: 2px solid #357CA5;
+    cursor: pointer;
 }
 .delivery-further__button {
     width: 100%;
     max-width: 110px;
-    padding: 8px 0;
+    padding: 10px 0;
     background: #357CA5;
     box-shadow: 0 6px 12px rgba(44, 39, 56, 0.08), 0 12px 24px rgba(44, 39, 56, 0.16);
     border-radius: 3px;
@@ -160,5 +197,61 @@ body {
     color: #ffffff;
     text-align: center;
     border: none;
+    cursor: pointer;
+}
+.content-status {
+    padding: 32px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+    border-radius: 6px;
+    width: 100%;
+    max-width: 640px;
+    box-sizing: border-box;
+}
+.status-line {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin-bottom: 24px;
+}
+.status-name {
+    width: 100%;
+    min-width: 250px;
+}
+.status-name__head {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 23px;
+    color: #000000;
+}
+
+.status-select {
+    background: #FFFFFF;
+    border: 1px solid #DBE2EA;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 8px rgba(44, 39, 56, 0.04);
+    border-radius: 6px;
+    padding: 13px 16px;
+    width: 100%;
+    max-width: 317px;
+}
+
+@media (max-width: 991px) {
+    .text-desktop, .status-head-desktop {
+        display: none;
+    }
+    .status-head-mobile {
+        display: block;
+    }
+    .content {
+        flex-direction: column;
+    }
+    .content-info {
+        order: 1;
+    }
+    .content-integration {
+        justify-content: flex-start;
+        padding-left: 0;
+    }
 }
 
